feat: persist previous owner ordering
